fixed spacing issues within side-nave by adjusting gridtemplaterows to auto, 1fr auto

--- a/main.css
+++ b/main.css
@@ -18,10 +18,15 @@ header, main {
     height: 100vh;
     width: 20vw;
     display: grid;
-    grid-template-rows: auto;
+    grid-template-rows: auto 1fr auto;
     background-color: lightskyblue;
     color: white;
     grid-column: 1;
+
+}
+
+.side-nav {
+    align-self: start;
 }
 
 .side-panel ul {
@@ -37,7 +42,9 @@ header, main {
     gap: 12px;
 }
 
-.settings {}
+.settings {
+    align-self: start;
+}
 
 .single-setting {
     display: grid;
@@ -50,6 +57,8 @@ header, main {
     grid-template-columns: auto 1fr;
     gap: 12px;
     align-items: center;
+    height: 50px;
+    margin-bottom: 200px;
 }
 
 /* ICONS */
